--- a/.xmobarrc
+++ b/.xmobarrc
@@ -1,18 +1,20 @@
 Config { 
 
    -- appearance
-     font =         "xft:Source Code Pro:size=11:bold:antialias=true:hinting=true"
+     font =         "xft:Source Code Pro Semibold:size=9:antialias=true:hinting=true"
+   , additionalFonts = ["xft:FontAwesome:size=12"
+                        , "xft:Source Code Pro:bold:size=11:antialias=true:hinting=true"]
    , bgColor =      "#3D3F42"
    -- , fgColor =      "#D3B99E"
    , fgColor =      "#ebd999"
-   , position =     Top
+   , position =     TopSize C 100 30
    , border =       BottomB
    , borderColor =  "#333334"
 
    -- layout
    , sepChar =  "%"   -- delineator between plugin names and straight text
    , alignSep = "}{"  -- separator between left-right alignment
-   , template = " %StdinReader% }{%KDFW% | %date% | %memory% "
+   , template = " %StdinReader% }{%KDFW%  %date%  %time%  %tuxicon% %kernel% "
 
    -- general behavior
    , lowerOnStart =     True    -- send to bottom of window stack on start
@@ -39,7 +41,7 @@ Config {
    , commands = 
 
         -- weather monitor
-        [ Run Weather "KDFW" [ "--template", "<skyCondition> | <fc=#4682B4><tempF></fc>°F | <fc=#4682B4><rh></fc>% RH"
+        [ Run Weather "KDFW" [ "--template", "<fn=1><fc=#c9d0d0>\xf0c2</fc></fn> <skyCondition> <fc=#4682B4><tempF></fc>°F"
                              ] 36000
 
         -- network activity monitor (dynamic interface resolution)
@@ -97,7 +99,10 @@ Config {
 
         -- time and date indicator 
         --   (%F = y-m-d date, %a = day of week, %T = h:m:s time)
-        , Run Date           "<fc=#2dbc94>%F (%a) %T</fc>" "date" 10
+        , Run Date           "<fn=1>\xf133</fn> <fc=#2dbc94>%A, %b%e</fc>" "date" 10
+        , Run Date           "<fn=1>\xf017</fn> %R" "time" 10
+        , Run Com "echo" ["<fn=1>\xf17c</fn>"] "tuxicon" 36000
+        , Run Com "uname" ["-r"] "kernel" 36000
 
         -- keyboard layout indicator
         , Run Kbd            [ ("us(dvorak)" , "<fc=#00008B>DV</fc>")
